frontend/src/styles/app.scss
body {
  margin: 0;
}

.App {
  display: flex;
  height: 100vh;

  .list {
    width: 200px;
    background-color: #f8f8f8;
    padding: 20px;
    overflow-y: auto;
  }

  .note {
    flex: 1;
    padding: 20px;
    width: 90%;
    .container {
      height: 100%;
      overflow-y: auto;
      overflow-x: auto;
      border: 1px solid #ccc;
    }
  }
}

